// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > should render correctly when default checked 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="field-1"
      role="group"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        <span
          class="govuk-heading-s govuk-!-margin-bottom-0"
        >
          Display Legend
        </span>
      </legend>
      <div
        class="govuk-checkboxes flex govuk-checkboxes--small"
        data-module="govuk-checkboxes"
      >
        <div
          class=""
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              checked=""
              class="govuk-checkboxes__input"
              id="field-1-radioValue"
              name="field1"
              type="checkbox"
              value="radioValue"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="field-1-radioValue"
            >
              Radio Label
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`Checkbox > should render correctly when not default checked 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="field-1"
      role="group"
    >
      <legend
        class="govuk-fieldset__legend govuk-visually-hidden"
      >
        <span
          class="govuk-heading-s govuk-!-margin-bottom-0"
        >
          Display Legend
        </span>
      </legend>
      <div
        class="govuk-checkboxes flex govuk-checkboxes--small"
        data-module="govuk-checkboxes"
      >
        <div
          class=""
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="field-1-radioValue"
              name="field1"
              type="checkbox"
              value="radioValue"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="field-1-radioValue"
            >
              Radio Label
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
